--- a/about-us.html
+++ b/about-us.html
@@ -46,7 +46,7 @@ https://templatemo.com/tm-574-mexant
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          <img src="assets/images/medicus-logo-2025.png" style="height: 80px; width: auto;" alt="Medicuslegal Services">
+                          <img src="assets\images\LOGO11.PNG" style="height: 80px; width: auto;" alt="Medicuslegal Services">
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -54,14 +54,14 @@ https://templatemo.com/tm-574-mexant
                           <li class="scroll-to-section"><a href="index.html">Home</a></li>
                           <li class="scroll-to-section"><a href="index.html">Services</a></li>
                           <li class="scroll-to-section"><a href="index.html">About</a></li>
-                          <li class="has-sub">
+                          <!-- <li class="has-sub">
                               <a href="javascript:void(0)">Pages</a>
                               <ul class="sub-menu">
                                   <li><a href="about-us.html">About Us</a></li>
                                   
                                   <li><a href="contact-us.html">Contact Us</a></li>
                               </ul>
-                          </li>
+                          </li> -->
                           <li class="scroll-to-section"><a href="index.html">Testimonials</a></li>
                           <li><a href="contact-us.html">Contact Support</a></li> 
                       </ul>        
@@ -217,7 +217,7 @@ Let me know if you'd like a shorter version or one tailored to a more marketing 
       <!-- Logo -->
       <div class="col-lg-3 mb-3 mb-lg-0 text-center text-lg-start">
         <!-- <img src="assets\images\medicus-logo-2025.png" style="height: 80px; width: auto;" alt="Medicuslegal Services"> -->
-  <img src="assets\images\MEDICUSLEGAL SERVICES PVT. LTD_logo.png" alt="MedicusLegal Logo" >
+  <img src="assets\images\LOGO11.PNG" alt="MedicusLegal Logo" >
   <h4 style="margin-left: 20px; margin-top: 10px; font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  color: #e0d2d2;">
     Doctor's Safety Our Priority 
   </h4>
