--- a/contact-us.html
+++ b/contact-us.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-574-mexant
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          <img src="assets\images\MEDICUSLEGAL SERVICES PVT. LTD_logo.png" style="height: 83px; width: auto;" alt="Medicuslegal Services">
+                          <img src="assets\images\LOGO11.PNG" style="height: 83px; width: auto;" alt="Medicuslegal Services">
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -64,12 +64,12 @@ https://templatemo.com/tm-574-mexant
                               <a href="javascript:void(0)">Pages</a>
                               <ul class="sub-menu">
                                   <li><a href="about-us.html">About Us</a></li>
-                                  <li><a href="our-services.html">Our Services</a></li>
+                                  
                                   <li><a href="contact-us.html">Contact Us</a></li>
                               </ul>
                           </li>
                           <li class="scroll-to-section"><a href="index.html">Testimonials</a></li>
-                          <li><a href="contact-us.html">Contact Support</a></li> 
+                          <li><a href="contact-us.html">Contact Us</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
                           <span>Menu</span>
@@ -120,6 +120,7 @@ https://templatemo.com/tm-574-mexant
                 <i class="fa fa-phone"></i>
                 <h4>Phone Number</h4>
                 <a href="tel:05224612326">0522 461 2326</a><br>
+                <h4>Whatapp Number</h4>
                 <a href="tel:8299869572">8299869572</a>
 
               </div>
@@ -128,7 +129,8 @@ https://templatemo.com/tm-574-mexant
               <div class="info-item">
                 <i class="fa fa-map-marked-alt"></i>
                 <h4>Address</h4>
-                <a href="#">Address- Shop no B-69 anpurna complex sector-H,LDA colony Kanpur road Lucknow 226012
+                <a href="#">Address-  UGF-69 BN-B Annapurna complex sector-H,
+LDA colony Kanpur road Lucknow 226012
 </a>
               </div>
             </div>
@@ -229,17 +231,18 @@ https://templatemo.com/tm-574-mexant
     <div class="row text-center text-lg-start align-items-center mb-4">
       <!-- Logo -->
       <div class="col-lg-3 mb-3 mb-lg-0 text-center text-lg-start">
-  <img src="assets\images\MEDICUSLEGAL SERVICES PVT. LTD_logo.png" alt="MedicusLegal_Services Logo" >
-  <h4 style="margin-top: 10px; font-style: normal; font-size: 17px; color: #e0d2d2;">
-    Doctor's Security<br>Our Priority 
-  </h4>
+  <img src="assets\images\LOGO11.PNG" alt="MedicusLegal_Services Logo" >
+  <!-- <h4 style="margin-top: 10px; font-style: normal; font-size: 17px; color: #e0d2d2;">
+    Doctor's Safety<br>Our Priority 
+  </h4> -->
 </div>
 
       <!-- Address & Contact -->
       <div class="col-lg-5 mb-3 mb-lg-0">
         <p style="margin: 0; font-size: larger;">
           MedicusLegal Services Pvt Ltd<br>
-          <strong>Address</strong> - B-69 Annapurna complex sector-H,<br>LDA colony Kanpur road Lucknow 226012<br>
+          <strong>Address</strong> :-  UGF-69 BN-B Annapurna complex,<br> sector-H,
+LDA colony Kanpur road Lucknow 226012<br>
           <br>
           <a href="tel:05224612326" style="text-decoration: none; color: #007bff;">
             <script src="https://cdn.lordicon.com/libs/frhvbuzj/lord-icon-2.0.2.js"></script>
