--- a/index.html
+++ b/index.html
@@ -45,8 +45,21 @@ https://templatemo.com/tm-574-mexant
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo" >
-                          <img src="assets\images\MEDICUSLEGAL SERVICES PVT. LTD_logo.png" style="height: 80px; width: auto;" alt="Medicuslegal Services">
-                          
+                          <img src="assets\images\LOGO11.PNG" style="height: 100px; width: auto;" alt="Medicuslegal Services"> 
+                          <!-- <span class="company-name" style="display: inline-block; vertical-align: middle; margin-left: 16px; font-size: .9rem; font-weight: 300; color: #ffffff; font-family: 'Poppins', Arial, sans-serif;">
+                            MedicusLegal Services Pvt Ltd
+                          </span>
+                          <style>
+                            @media (max-width: 768px) {
+                              .company-name {
+                                display: block;
+                                margin-left: 0;
+                                margin-top: 8px;
+                                font-size: 1rem;
+                                text-align: left;
+                              }
+                            } -->
+                          </style>
                       </a>
                       <!-- <h4 style="color: #af3131; font-size: 30px; padding-top: 0px;">Medicus Legal</h4> -->
                       <!-- ***** Logo End ***** -->
@@ -55,6 +68,7 @@ https://templatemo.com/tm-574-mexant
                           <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                           <li class="scroll-to-section"><a href="#services">Services</a></li>
                           <li class="scroll-to-section"><a href="#about">About</a></li>
+                          <li class="scroll-to-section"><a href="contact-us.html">Contact Us</a></li>
                           <!-- <li class="has-sub">
                               <a href="javascript:void(0)">Pages</a>
                               <ul class="sub-menu">
@@ -116,10 +130,10 @@ https://templatemo.com/tm-574-mexant
                   </p>
                   <div class="buttons">
                     <div class="green-button">
-                      <a href="#">About Us</a>
+                      <a href="about-us.html">About Us</a>
                     </div>
                     <div class="orange-button">
-                      <a href="contact-us.html">Contact Us</a>
+                      <a href="tel:05224612326">Call Us</a>
                     </div>
                   </div>
                 </div>
@@ -278,7 +292,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
         <div class="col-lg-6">
           <div class="service-item">
             <i class="fas fa-hand-holding-medical"></i>
-            <h4>24/7 Legal Helpline</h4>
+            <h4>24x7 Legal Helpline</h4>
             <p>Round-the-clock access to legal advice and emergency support.</p>
           </div>
         </div>
@@ -328,10 +342,10 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
         <div class="col-lg-7">
           <div class="buttons">
             <div class="green-button">
-              <a href="https://drive.google.com/file/d/1_swfYToK5MWvc5XXMEI9fJPY5AUbFtcp/view?usp=drive_link">Download Brochure </a>
+              <a href="https://drive.google.com/file/d/1XlIggi_SWEj1SCOAovDMx2JxlCva-hI8/view?usp=sharing">Download Brochure </a>
             </div>
             <div class="orange-button">
-              <a href="#">Call Us</a>
+              <a href="tel:05224612326">Call Us</a>
             </div>
           </div>
         </div>
@@ -709,18 +723,20 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
   <div class="container">
     <div class="row text-center text-lg-start align-items-center mb-4">
       <!-- Logo -->
-      <div class="col-lg-3 mb-3 mb-lg-0 text-center text-lg-start">
+      <div class="col-lg-3 mb-3 mb-lg-0 text-center  text-lg-start">
         <!-- <img src="assets\images\medicus-logo-2025.png" style="height: 80px; width: auto;" alt="Medicuslegal Services"> -->
-  <img src="assets\images\MEDICUSLEGAL SERVICES PVT. LTD_logo.png" alt="MedicusLegal Logo" >
-  <h4 style="margin-left: 20px; margin-top: 10px; font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  color: #e0d2d2;">
+  <img src="assets\images\LOGO11.PNG" alt="MedicusLegal Logo" >
+  <!-- <h4 style="margin-left: 20px; margin-top: 10px; font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  color: #e0d2d2;">
     Doctor's Safety Our Priority 
-  </h4>
+  </h4> -->
 </div>
-
+  
       <!-- Address & Contact -->
       <div class="col-lg-5 mb-3 mb-lg-0">
         <p style="margin: 0; font-size: larger;">
           MedicusLegal Services Pvt Ltd<br>
+          
+          <br>
           <strong>Address</strong> - UGF-69 BN-B Annapurna complex sector-H,<br>LDA colony Kanpur road Lucknow 226012<br>
           <br>
           <a href="tel:05224612326" style="text-decoration: none; color: #007bff;">
@@ -764,12 +780,42 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
         <a href="#" style="color: #e0dcdc"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
+    <div class="contact-section">
+  <!-- Map Column -->
+  <div class="map">
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3561.3841400496344!2d80.90433117543543!3d26.795894576717025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjbCsDQ3JzQ1LjIiTiA4MMKwNTQnMjQuOSJF!5e0!3m2!1sen!2sin!4v1748162024497!5m2!1sen!2sin" 
+      width="100%" 
+      height="300" 
+      style="border:0;" 
+      allowfullscreen 
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
+
+  <!-- Office Hours Column -->
+  <div class="office-hours">
+    <h2>Office Hours</h2>
+    <ul>
+      <li><strong>Monday:</strong> 10:00 AM – 6:00 PM</li>
+      <li><strong>Tuesday:</strong> 10:00 AM – 6:00 PM</li>
+      <li><strong>Wednesday:</strong> 10:00 AM – 6:00 PM</li>
+      <li><strong>Thursday:</strong> 10:00 AM – 6:00 PM</li>
+      <li><strong>Friday:</strong> 10:00 AM – 6:00 PM</li>
+      <li><strong>Saturday:</strong> 10:00 AM – 6:00 PM</li>
+      <li class="closed"><strong>Sunday:</strong> Closed</li>
+    </ul>
+  </div>
+</div>
+
+   
 
     <div class="row">
       <div class="col-lg-12 text-center">
         <p style="margin-bottom: 0;">
           © 2025 MedicusLegal Services Pvt Ltd. All Rights Reserved. <br>
-          Built by <a title="CSS Templates" rel="sponsored" href="#" target="_blank">Harsh</a>
+          <!-- Built by <a title="CSS Templates" rel="sponsored" href="#" target="_blank">Harsh</a> -->
         </p>
       </div>
     </div>
