--- a/contact-us.html
+++ b/contact-us.html
@@ -129,7 +129,7 @@ https://templatemo.com/tm-574-mexant
               <div class="info-item">
                 <i class="fa fa-map-marked-alt"></i>
                 <h4>Address</h4>
-                <a href="#">Address-  UGF-69 BN-B Annapurna complex sector-H,
+                <a href="#">  UGF-69 BN-B Annapurna complex sector-H,
 LDA colony Kanpur road Lucknow 226012
 </a>
               </div>
