--- a/contact-us.html
+++ b/contact-us.html
@@ -250,7 +250,7 @@ LDA colony Kanpur road Lucknow 226012<br>
 </lord-icon>
             </i> 0522 461 2326
           </a><br>
-          <a href="tel:8299869572" style="text-decoration: none; color:#0eaf9c;">
+          <a href="https://wa.me/918299869572" style="text-decoration: none; color:#0eaf9c;">
             <script src="https://cdn.lordicon.com/lordicon.js"></script>
 <lord-icon
     src="https://cdn.lordicon.com/edecmgef.json"
