--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
 </lord-icon>
             </i> 0522 461 2326
           </a><br>
-          <a href="tel:8299869572" style="text-decoration: none; color:#0eaf9c;">
+          <a href="https://wa.me/918299869572" style="text-decoration: none; color:#0eaf9c;">
             <script src="https://cdn.lordicon.com/lordicon.js"></script>
 <lord-icon
     src="https://cdn.lordicon.com/edecmgef.json"
