--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ https://templatemo.com/tm-574-mexant
                 <div class="header-text">
                   <h2><em>Medicuslegal</em>  <br>Services <em></em></h2>
                   <!-- <div class="div-dec"></div> -->
-                  <p>Medicuslegal Services Pvt Ltd, is a Risk management company, that provide medical indemnity to Doctors, Hospitlas and Diagnosistic centers across India.</p>
+                  <p>Medicuslegal Services Pvt Ltd, is a Risk management company, that provide Professional indemnity to Doctors, Hospitals and Diagnosistic centers across India.</p>
                   <div class="buttons">
                     <!-- <div class="green-button">
                       <a href="#">Discover More</a>
@@ -238,7 +238,7 @@ Because protecting your profession today means preserving your legacy for tomorr
     <p>
       
 
-MedicusLegal Services Pvt. Ltd., established in 2025, is a dedicated risk management firm offering specialized medico-legal services and comprehensive medical indemnity coverage to doctors and healthcare institutions across India.
+MedicusLegal Services Pvt. Ltd., established in May 2025, is a dedicated risk management firm offering specialized medico-legal services and comprehensive Professional indemnity coverage to doctors and healthcare institutions across India.
 
 Our mission is to support and safeguard medical professionals at every stage of their practice. We recognize the increasing complexities and legal risks within the healthcare sector and are committed to being a dependable ally for our clients. Our services are tailored to provide strong legal representation, proactive risk management strategies, and timely support when it matters most.
 
@@ -278,7 +278,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
         <div class="col-lg-6">
           <div class="service-item">
             <i class="fas fa-shield"></i>
-            <h4>Medical Indemnity Insurance</h4>
+            <h4>Professional Indemnity Insurance</h4>
             <p>Coverage for legal claims, compensation, and court proceedings.</p>
           </div>
         </div>
@@ -387,7 +387,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
             <div class="accordion-body">
                 <div class="content">
                     <p>
-                    At MedicusLegal Services, we specialize in protecting the rights and professional integrity of healthcare providers. With 24/7 availability, expert legal counsel across all levels of the judiciary—from district forums to the Supreme Court—and deep understanding of medico-legal intricacies, we offer unmatched legal support tailored to the medical profession. Our team of seasoned advocates and medico-legal experts ensures not only representation but also proactive guidance, risk coverage, and end-to-end case management. Whether you're facing allegations of negligence, regulatory action, or civil/criminal proceedings, MedicusLegal is your trusted partner in navigating the complex legal landscape with confidence and security.
+                    At MedicusLegal Services, we specialize in protecting the rights and professional integrity of healthcare providers. With 24x7 availability, expert legal counsel across all levels of the judiciary—from district forums to the Supreme Court—and deep understanding of medico-legal intricacies, we offer unmatched legal support tailored to the medical profession. Our team of seasoned advocates and medico-legal experts ensures not only representation but also proactive guidance, risk coverage, and end-to-end case management. Whether you're facing allegations of negligence, regulatory action, or civil/criminal proceedings, MedicusLegal is your trusted partner in navigating the complex legal landscape with confidence and security.
                     Let me know if you'd like a shorter version or one tailored to a more marketing or empathetic tone.</p>
                 </div>
             </div>
