--- a/contact-us.html
+++ b/contact-us.html
@@ -120,7 +120,7 @@ https://templatemo.com/tm-574-mexant
                 <i class="fa fa-phone"></i>
                 <h4>Phone Number</h4>
                 <a href="tel:05224612326">0522 461 2326</a><br>
-                <h4>Whatapp Number</h4>
+                <h4>WhatsApp Number</h4>
                 <a href="tel:8299869572">8299869572</a>
 
               </div>
