--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Medicuslegal Services: Best Medical Risk Managment company </title>
+    <title>Medicuslegal Services: India's Best Medico-legal, Professional Indemnity and Risk Managment company </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -293,7 +293,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
           <div class="service-item">
             <i class="fas fa-hand-holding-medical"></i>
             <h4>24x7 Legal Helpline</h4>
-            <p>Round-the-clock access to legal advice and emergency support.</p>
+            <p>Round-the-clock access to legal advice and emergency support. <br><b>Helpline No -</b> 0522-4612326  </p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -345,7 +345,7 @@ MedicusLegal Services Pvt. Ltd. stands as a symbol of trust and commitment in th
               <a href="https://drive.google.com/file/d/1XlIggi_SWEj1SCOAovDMx2JxlCva-hI8/view?usp=sharing">Download Brochure </a>
             </div>
             <div class="orange-button">
-              <a href="tel:05224612326">Call Us</a>
+              <a href="tel:918299869572">Call Us</a>
             </div>
           </div>
         </div>
