--- a/about-us.html
+++ b/about-us.html
@@ -126,7 +126,7 @@ https://templatemo.com/tm-574-mexant
             <div class="accordion-body">
                 <div class="content">
                     <p>
-At MedicusLegal Services, we specialize in protecting the rights and professional integrity of healthcare providers. With 24/7 availability, expert legal counsel across all levels of the judiciary—from district forums to the Supreme Court—and deep understanding of medico-legal intricacies, we offer unmatched legal support tailored to the medical profession. Our team of seasoned advocates and medico-legal experts ensures not only representation but also proactive guidance, risk coverage, and end-to-end case management. Whether you're facing allegations of negligence, regulatory action, or civil/criminal proceedings, MedicusLegal is your trusted partner in navigating the complex legal landscape with confidence and security.
+At MedicusLegal Services, we specialize in protecting the rights and professional integrity of healthcare providers. With 24x7 availability, expert legal counsel across all levels of the judiciary—from district forums to the Supreme Court—and deep understanding of medico-legal intricacies, we offer unmatched legal support tailored to the medical profession. Our team of seasoned advocates and medico-legal experts ensures not only representation but also proactive guidance, risk coverage, and end-to-end case management. Whether you're facing allegations of negligence, regulatory action, or civil/criminal proceedings, MedicusLegal is your trusted partner in navigating the complex legal landscape with confidence and security.
 
 ---
 
@@ -150,7 +150,7 @@ Let me know if you'd like a shorter version or one tailored to a more marketing 
         <div class="col-lg-7">
           <div class="buttons">
             <div class="green-button">
-              <a href="tel:05224612326">Call Us: "0522 4612326" </a>
+              <a href="tel:918299869572">Call Us: "8299869572" </a>
             </div>
             <!-- <div class="orange-button">
               <a href="#">Contact Us</a>
