--- a/payment.html
+++ b/payment.html
@@ -129,8 +129,8 @@ https://templatemo.com/tm-574-mexant
               </li>
               <li class="mb-3 d-flex align-items-center">
                 <span style="min-width: 140px; font-weight: 600;">UPI ID:</span>
-                <span id="ifsc-code" class="me-2">8299869572@okbizaxis</span>
-                <button class="btn btn-outline-secondary btn-sm" onclick="copyToClipboard('ifsc-code')">Copy</button>
+                <span id="upi-id" class="me-2">8299869572@okbizaxis</span>
+                <button class="btn btn-outline-secondary btn-sm" onclick="copyToClipboard('upi-id')">Copy</button>
               </li>
             </ul>
           </div>
