--- a/contact-us.html
+++ b/contact-us.html
@@ -118,9 +118,9 @@ https://templatemo.com/tm-574-mexant
             <div class="col-lg-4">
               <div class="info-item">
                 <i class="fa fa-phone"></i>
-                <h4>Phone Number</h4>
+                <h4>Landline Number</h4>
                 <a href="tel:05224612326">0522 461 2326</a><br>
-                <h4>WhatsApp Number</h4>
+                <h4>Phone Number</h4>
                 <a href="tel:8299869572">8299869572</a>
 
               </div>
